fix navigation menu alignment

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -5,6 +5,7 @@
 
 	&__menu {
 		list-style: none;
+		margin-bottom: 0;
 
 		li {
 			padding-left: $marginNormal;
